<resources>
    <string name="app_name">secondPMP</string>
    <string name="appl_name">Моја апликација</string>
    <string name="search">Пребарувај</string>
    <string name="save">Зачувај</string>
    <string name="clear">Избриши</string>
    <string name="enter_word">Внеси збор</string>
    <string name="new_translation">Нов превод</string>
    <string name="result">Резултат</string>
    <string name="scroll_view_desc">Translation results</string>

</resources>