<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAAC8"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingTop="100dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/appl_name"
        android:textSize="18sp"
        android:textStyle="bold" />
    <SearchView
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:queryHint="@string/enter_word"
        android:iconifiedByDefault="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tagInput"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/new_translation"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#710200"
            android:text="@string/save"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/result"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#710200"
        android:text="@string/clear"
        android:textColor="#FFFFFF"/>

</LinearLayout>
